--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,9 @@ html, body {
 }
 
 canvas {
-  top: 0;
-  left: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   border: 1px solid black;
   z-index: 1;
   width: 600px;
@@ -18,4 +19,6 @@ canvas {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   border-radius: 10px;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
