--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,12 @@ html, body {
   color: white
 }
 
+@media only screen and (max-width: 768px) {
+  body {
+    orientation: landscape;
+  }
+}
+
 canvas {
   position: absolute;
   top: 50%;
