--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ html, body {
   color: white
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (orientation:portrait) {
   body {
     height: 100vw;
     transform: rotate(90deg);
