--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html, body {
 @media only screen and (orientation:portrait) {
   body {
     height: 100vw;
-    width: 100vw;
+    width: 100vh;
     transform: rotate(90deg);
   }
 }
