--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,21 @@ html, body {
     width: 100vh;
     transform: rotate(90deg);
   }
+  canvas {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border: 1px solid black;
+    z-index: 1;
+    width: 360px;
+    height: 600px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 10px;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
 }
 
 canvas {
