--- a/css/main.css
+++ b/css/main.css
@@ -19,8 +19,8 @@ html, body {
     left: 50%;
     border: 1px solid black;
     z-index: 1;
-    width: 360px;
-    height: 600px;
+    width: 90%;
+    height: 90%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
