--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,32 @@
+@media only screen and (max-with: 768px) {
+  @media only screen and (orientation:portrait) {
+    body {
+      height: 100vw;
+      width: 100vh;
+      transform: rotate(90deg);
+    }
+    canvas {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      border: 1px solid black;
+      z-index: 1;
+      width: 360px;
+      height: 600px;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+      border-radius: 10px;
+      -webkit-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+  }
+  }
+}
+
+@media only screen and (min-width: 768px) {
+
+}
+
 html, body {
   height: 100%;
   width: 100%;
@@ -5,29 +34,6 @@ html, body {
   font-family: 'Source Sans Pro', sans-serif;
   background-color: black;
   color: white
-}
-
-@media only screen and (orientation:portrait) {
-  body {
-    height: 100vw;
-    width: 100vh;
-    transform: rotate(90deg);
-  }
-  canvas {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    border: 1px solid black;
-    z-index: 1;
-    width: 360px;
-    height: 600px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border-radius: 10px;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
 }
 
 canvas {
