--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@media only screen and (max-with: 768px) {
+/*media only screen and (max-with: 768px) {*/
   @media only screen and (orientation:portrait) {
     body {
       height: 100vw;
@@ -21,7 +21,7 @@
       transform: translate(-50%, -50%);
   }
   }
-}
+/*}*/
 
 @media only screen and (min-width: 768px) {
 
