--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@
     body {
       height: 100vw;
       width: 100vh;
-      transform: rotate(90deg);
     }
     canvas {
       position: absolute;
@@ -11,14 +10,15 @@
       left: 50%;
       border: 1px solid black;
       z-index: 1;
-      width: 360px;
-      height: 600px;
+      width: 600px;
+      height: hsl(360, 100%, 100%);px;
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
       border-radius: 10px;
       -webkit-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
+      transform: rotate(90deg);
   }
   }
 /*}*/
