--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
-/*media only screen and (max-with: 768px) {*/
-  @media only screen and (orientation:portrait) {
+media only screen and (max-with: 768px) {
+/*@media only screen and (orientation:portrait) {*/
     body {
       height: 100vw;
       width: 100vh;
@@ -11,7 +11,7 @@
       border: 1px solid black;
       z-index: 1;
       width: 600px;
-      height: 360;
+      height: 360px;
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
