commented out css rotation

--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,9 @@ media only screen and (max-with: 768px) {
       -webkit-transform: translate(-50%, -50%);
       -moz-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
-      -webkit-transform: rotate(90deg);
+      /*-webkit-transform: rotate(90deg);
       -moz-transform: rotate(90deg);
-      transform: rotate(90deg);
+      transform: rotate(90deg);*/
   }
   }
 /*}*/
