--- a/css/main.css
+++ b/css/main.css
@@ -14,14 +14,20 @@ media only screen and (max-with: 768px) {
       height: 360px;
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
+      -o-box-sizing: border-box;
+      -ms-box-sizing: border-box;
       box-sizing: border-box;
       border-radius: 10px;
       -webkit-transform: translate(-50%, -50%);
       -moz-transform: translate(-50%, -50%);
+      -o-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
-      /*-webkit-transform: rotate(90deg);
+      -webkit-transform: rotate(90deg);
       -moz-transform: rotate(90deg);
-      transform: rotate(90deg);*/
+      -o-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+      transform: rotate(90deg);
   }
   }
 /*}*/
