--- a/css/main.css
+++ b/css/main.css
@@ -23,8 +23,8 @@ media only screen and (max-with: 768px) {
       -moz-transform: translate(-50%, -50%);
       -o-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
-      /*transform: translate(-50%, -50%);
-      -webkit-transform: rotate(90deg);
+      transform: translate(-50%, -50%);
+      /*-webkit-transform: rotate(90deg);
       -moz-transform: rotate(90deg);
       -o-transform: rotate(90deg);
       -ms-transform: rotate(90deg);
