--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+//if mobile
 media only screen and (max-with: 768px) {
  @media only screen and (orientation:portrait) {*/
     body {
@@ -7,7 +8,7 @@ media only screen and (max-with: 768px) {
   }
     canvas {
       position: absolute;
-      top: 60%;
+      top: 40%;
       left: 50%;
       border: 1px solid black;
       z-index: 1;
@@ -31,7 +32,7 @@ media only screen and (max-with: 768px) {
       transform: rotate(90deg);*/
   }
   }
-
+//Otherwise
 @media only screen and (min-width: 768px) {
 
 }
