--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-//if mobile
+/*if mobile*/
 media only screen and (max-with: 768px) {
  @media only screen and (orientation:portrait) {*/
     body {
@@ -8,8 +8,8 @@ media only screen and (max-with: 768px) {
   }
     canvas {
       position: absolute;
-      top: 50%;
-      left: 50%;
+      /*top: 50%;
+      left: 50%;*/
       z-index: 1;
       width: 650px;
       height: 360px;
@@ -31,7 +31,7 @@ media only screen and (max-with: 768px) {
       transform: rotate(90deg);*/
   }
   }
-//Otherwise
+/*Otherwise*/
 @media only screen and (min-width: 768px) {
 
 }
