--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /*if mobile*/
 media only screen and (max-with: 768px) {
- @media only screen and (orientation:portrait) {*/
+/* @media only screen and (orientation:portrait) {*/
     body {
       height: 100vw;
       width: 100vh;
@@ -11,8 +11,8 @@ media only screen and (max-with: 768px) {
       /*top: 50%;
       left: 50%;*/
       z-index: 1;
-      width: 650px;
-      height: 360px;
+      width: 600px;
+      height: 340px;
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       -o-box-sizing: border-box;
@@ -29,7 +29,7 @@ media only screen and (max-with: 768px) {
       -o-transform: rotate(90deg);
       -ms-transform: rotate(90deg);
       transform: rotate(90deg);*/
-  }
+/*  }*/
   }
 /*Otherwise*/
 @media only screen and (min-width: 768px) {
