--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 /*if mobile*/
 media only screen and (max-with: 768px) {
 /* @media only screen and (orientation:portrait) {*/
-    body {
+    /*body {
       height: 100vw;
       width: 100vh;
-    }
+    }*/
   }
     canvas {
       position: absolute;
