--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,21 @@ media only screen and (max-with: 768px) {
       transform: rotate(90deg);*/
 /*  }*/
   }
+  .gameContainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    background-color: darkBlue;
+    width: 500px;
+    height: 250px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 10px;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
 /*Otherwise*/
 @media only screen and (min-width: 768px) {
 
@@ -53,6 +68,21 @@ canvas {
   z-index: 1;
   width: 600px;
   height: 360px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border-radius: 10px;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.gameContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  background-color: darkBlue;
+  width: 1250px;
+  height: 600px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
