--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,8 @@ media only screen and (max-with: 768px) {
   }
   .gameContainer {
     position: absolute;
+    content: '.';
+    visibility: hidden;
     top: 50%;
     left: 50%;
     z-index: 1;
