--- a/css/main.css
+++ b/css/main.css
@@ -83,8 +83,8 @@ canvas {
   left: 50%;
   z-index: 1;
   background-color: darkBlue;
-  width: 1250px;
-  height: 600px;
+  width: 100vw;
+  height: 100vh;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
